[project]
name = "blackline"
version = "0.1.0"
description = "Document management service with redlining (structured text changes) and search"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.115",
    "pydantic>=2.7",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Everyday suite stays fast (live-TDD friendly); the 10MB tier runs with:
#   uv run pytest -m benchmark -s
addopts = "-m 'not benchmark'"
markers = [
    "benchmark: large-document performance tests (excluded by default via addopts)",
]
